--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,2 +1,30 @@
 // Import page-specific CSS files here.
 @import "home";
+@import '/cover';
+
+.gradient {
+    mask-image: linear-gradient(to bottom, rgba(0,0,0,.4) 0%,rgba(0,0,0,0.9) 100%);
+    -webkit-mask-image: linear-gradient(to bottom, rgba(0,0,0,.4) 0%,rgba(0,0,0,0.9) 100%);
+}
+
+.imgcarousel {
+
+    width: 100vw;
+    height: 100vh;
+    background-size: cover;
+    object-fit: cover;
+    z-index: -1;
+}
+
+.masthead {
+    width: 100vw;
+    flex-direction: column;
+    position: fixed;
+    z-index: 100;
+    display: flex;
+    justify-content: space-between;
+    box-sizing: border-box;
+    text-align: center;
+    padding: 20px 100px;
+    background-color: transparent;
+  }
