--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,10 +1,106 @@
+<header class="masthead mb-auto" style='background-image: linear-gradient(to bottom, rgba(0,0,0,.85), rgba(0,0,0,1)); box-shadow: 1px 1px 1px 1px lightgrey'>
+  <%= render 'layouts/header' %>
+</header>
 
+<div class=nav>
 
-<br>
-<main role="main" class="inner cover">
-<div class='container' style='margin-top: 0vh; margin-right: 5vw; width: 25vw'>
-  <h1 class='display-4', style="font-family: 'Montserrat', sans-serif">Cocktail</h1>
-  <p class='lead my-3', style="font-family: 'Montserrat', sans-serif"> Select from a list of cocktail options </p>
-  <p class='lead mb-0', style="font-family: 'Montserrat', sans-serif"> Head there now... </p>
 </div>
-</main>
+<br>
+<div style='background-color: white; width: 100vw; height: 100vh' >
+  <div class=container style="margin-top: 104px">
+    <nav aria-label="Page navigation example">
+    <ul class="pagination justify-content-end">
+      <li class="page-item disabled">
+        <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
+      </li>
+      <li class="page-item"><a class="page-link" href="#">1</a></li>
+      <li class="page-item"><a class="page-link" href="#">2</a></li>
+      <li class="page-item"><a class="page-link" href="#">3</a></li>
+      <li class="page-item">
+        <a class="page-link" href="#">Next</a>
+      </li>
+    </ul>
+    </nav>
+  </div>
+  <div class=container style="display: flex; justify-content: space-between; margin-top: 16px">
+    <div class="list-group" id="myList" role="tablist"style="width: 24%; color: black">
+      <a class="list-group-item list-group-item-action active" data-toggle="list" href="#home" role="tab">Home</a>
+      <a class="list-group-item list-group-item-action" data-toggle="list" href="#profile" role="tab">Profile</a>
+      <a class="list-group-item list-group-item-action" data-toggle="list" href="#messages" role="tab">Messages</a>
+      <a class="list-group-item list-group-item-action" data-toggle="list" href="#settings" role="tab">Settings</a>
+    </div>
+  <div style='width: 72%'>
+    <div style='width: 100%; display: flex; justify-content: space-between; margin-bottom: 16px'>
+      <div class="card" style="width: 32%">
+        <img src="http://res.cloudinary.com/jacmax-developments/image/upload/adam-jaime-dmkmrNptMpw-unsplash_kga8kw.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Vodka Soda</p>
+        </div>
+      </div>
+      <div class="card" style="width: 32%;">
+        <img src="http://res.cloudinary.com/jacmax-developments/image/upload/adam-jaime-dmkmrNptMpw-unsplash_kga8kw.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Midori and Lime</p>
+        </div>
+      </div>
+      <div class="card" style="width: 32%">
+        <img src="http://res.cloudinary.com/jacmax-developments/image/upload/adam-jaime-dmkmrNptMpw-unsplash_kga8kw.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Scotch and Cola</p>
+        </div>
+      </div>
+    </div>
+    <div style='width: 100%; display: flex; justify-content: space-between; margin-bottom: 16px'>
+      <div class="card" style="width: 32%">
+        <img src="http://res.cloudinary.com/jacmax-developments/image/upload/adam-jaime-dmkmrNptMpw-unsplash_kga8kw.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Vodka Soda</p>
+        </div>
+      </div>
+      <div class="card" style="width: 32%;">
+        <img src="http://res.cloudinary.com/jacmax-developments/image/upload/adam-jaime-dmkmrNptMpw-unsplash_kga8kw.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Midori and Lime</p>
+        </div>
+      </div>
+      <div class="card" style="width: 32%">
+        <img src="http://res.cloudinary.com/jacmax-developments/image/upload/adam-jaime-dmkmrNptMpw-unsplash_kga8kw.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Scotch and Cola</p>
+        </div>
+      </div>
+    </div>
+    <div style='width: 100%; display: flex; justify-content: space-between; margin-bottom: 16px'>
+      <div class="card" style="width: 32%">
+        <img src="http://res.cloudinary.com/jacmax-developments/image/upload/adam-jaime-dmkmrNptMpw-unsplash_kga8kw.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Vodka Soda</p>
+        </div>
+      </div>
+      <div class="card" style="width: 32%;">
+        <img src="http://res.cloudinary.com/jacmax-developments/image/upload/adam-jaime-dmkmrNptMpw-unsplash_kga8kw.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Midori and Lime</p>
+        </div>
+      </div>
+      <div class="card" style="width: 32%">
+        <img src="http://res.cloudinary.com/jacmax-developments/image/upload/adam-jaime-dmkmrNptMpw-unsplash_kga8kw.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Scotch and Cola</p>
+        </div>
+      </div>
+    </div>
+    </div>
+  </div>
+  </div>
+</div>
+
+
+
+
+<footer class="mastfoot mt-auto">
+    <div class="inner">
+
+    </div>
+</footer>
+
