--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,11 +1,15 @@
 
-  <header class="masthead mb-auto">
+
     <div class="inner">
-      <h3 class="masthead-brand">Cocktails</h3>
+      <div class="container">
+      <h1 class="masthead-brand">Cocktails</h1>
       <nav class="nav nav-masthead justify-content-center">
-        <a class="nav-link" href="#">Home</a>
+        <a class="nav-link" href="/">Home</a>
+        <a class="nav-link" href="/cocktails">Cocktails</a>
         <a class="nav-link" id='new' href='/cocktails/new'>New</a>
         <a class="nav-link" href="#">Contact</a>
       </nav>
+      </div>
     </div>
   </header>
+
