--- a/app/assets/stylesheets/cover.scss
+++ b/app/assets/stylesheets/cover.scss
@@ -13,10 +13,10 @@ a:hover {
 .btn-secondary,
 .btn-secondary:hover,
 .btn-secondary:focus {
-  color: #333;
+  color: white;
   text-shadow: none; /* Prevent inheritance from `body` */
-  background-color: #fff;
-  border: .05rem solid #fff;
+  background-color: white;
+  border: .1rem solid #white;
 }
 
 
@@ -27,7 +27,7 @@ a:hover {
 html,
 body {
   height: 100%;
-  background-color: #333;
+  background-color: black;
 }
 
 body {
@@ -36,18 +36,47 @@ body {
   color: #fff;
   text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
 }
 
 .cover-container {
-  max-width: 90em;
+  max-width: 100em;
+}
+
+.container {
+  width: 100%;
+  padding-left: 16vw;
+  padding-right: 16vw;
+  margin: 0px;
+  max-width: 100vw
 }
 
 
 /*
  * Header
  */
-.masthead {
-  margin-bottom: 2rem;
+ .masthead {
+  width: 100vw;
+  flex-direction: column;
+  position: fixed;
+  z-index: 100;
+  display: flex;
+  justify-content: space-between;
+  box-sizing: border-box;
+  text-align: center;
+  padding: 16px 0px;
+}
+
+.mastfoot {
+  width: 100vw;
+  flex-direction: column;
+  z-index: 100;
+  display: block;
+  justify-content: space-between;
+  box-sizing: border-box;
+  text-align: center;
+  height: 50px;
+  background-color: #F5F5FA;
 }
 
 .masthead-brand {
@@ -98,6 +127,18 @@ body {
   font-weight: 700;
 }
 
+.cover h1 {
+  margin-bottom: 10px;
+}
+
+.cover p {
+  margin: 30px 0px;
+}
+
+.just {
+  width: 25vw;
+  text-align: left
+}
 
 /*
  * Footer
