--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,8 +1,13 @@
+<header class="masthead mb-auto" style='background-image: linear-gradient(to bottom, rgba(0,0,0,.85), rgba(0,0,0,1)); box-shadow: 5px 5px 4px 4px lightgrey'>
+  <%= render 'layouts/header' %>
+</header>
 
+<div class=nav>
 
+</div>
 <br>
-
-<div class='container'; style=>
+<div style='background-color: white; width: 100vw; height: auto' >
+<div class='container' style="margin-top: 200px; color: black">
   <%= simple_form_for @cocktail do |f| %>
     <%= f.error_notification %>
     <%= f.input :name %>
@@ -28,3 +33,10 @@
     <%= f.button :submit, class: 'btn-primary'  %>
   <% end %>
 </div>
+</div>
+
+<footer class="mastfoot mt-auto">
+    <div class="inner">
+
+    </div>
+</footer>
